2012-10-29  Vladimir Makarov  <vmakarov@redhat.com>

PR middle-end/55116
	* rtlanal.c (strip_address_mutation): Add SUBREG case.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@192949 138bc75d-0d04-0410-961f-82ee72b054a4